--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
     margin-bottom: 20px;
   }
   .second-column{
-    margin: 0;
+    margin: 0px;
   }
   .card2 {
     margin-bottom: 20px;
