--- a/style.css
+++ b/style.css
@@ -107,4 +107,12 @@ body {
   .card2 {
     margin-bottom: 20px;
   }
+
+}
+@media screen and (max-width: 640px){
+  .heading p {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
