--- a/style.css
+++ b/style.css
@@ -15,13 +15,15 @@ body {
 }
 
 .heading {
+  margin-top: 40px;
   text-align: center;
   margin-bottom: 20px;
 }
 
 .heading p {
   width: 540px;
-  margin: auto;
+  margin: 20px auto;
+  margin-bottom: 60px;
   color: hsl(230, 5%, 57%);
 }
 
